# prd-generator-agent

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/prd_generator_agent/: __init__.py  cli.py  core.py
tests/: test_core.py
