[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prd-generator-agent"
version = "0.1.0"
description = "Ingests user feedback, synthesizes patterns, and drafts product requirement documents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/prd-generator-agent"
Issues = "https://github.com/erron-ai/prd-generator-agent/issues"

[project.scripts]
prd-generator-agent = "prd_generator_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
